force-app/main/default/objects/Urban_Problem__c/Urban_Problem__c.object-meta.xml
<CustomObject>
    <label>Urban Problem</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>Problem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Urban Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>