force-app/main/default/objects/Urban_Problem__c/fields/Affected_Area__c.field-meta.xml
<CustomField>
    <fullName>Affected_Area__c</fullName>
    <label>Affected Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>