force-app/main/default/objects/Urban_Problem__c/fields/Problem_Category__c.field-meta.xml
<CustomField>
    <fullName>Problem_Category__c</fullName>
    <label>Problem Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Congestion</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>