force-app/main/default/objects/Urban_Problem__c/fields/Problem_Title__c.field-meta.xml
<CustomField>
    <fullName>Problem_Title__c</fullName>
    <label>Problem Title</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>