force-app/main/default/objects/Urban_Problem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Problem_Title__c</columns>
    <columns>Problem_Category__c</columns>
    <columns>Severity_Level__c</columns>
    <columns>Affected_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>